fix: alignment

--- a/src/components/Enhancer.css
+++ b/src/components/Enhancer.css
@@ -12,7 +12,7 @@ h1 {
   text-align: left;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 
